Modernize Maven project to leverage Java 21 features