@@ -1,10 +1,9 @@
 package examples.azure.aks.springboot;
 
 import java.math.BigInteger;
-import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
-import java.util.Random;
+import java.util.ArrayList;
+import java.util.random.RandomGenerator;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -19,54 +18,63 @@ public class Factorization {
     }
 
     public void findNewRandomFactor() {
-        var random = new Random();
+        var random = RandomGenerator.getDefault();
         var factor = random.nextInt(100);
         logger.info("New random factor: {}", factor);
     }
 
     public Factorization(boolean logging) {
-        logger.info("Logging enabled? " + logging);
-
+        logger.info("Logging enabled? {}", logging);
         this.logging = logging;
     }
 
     public List<Long> factors(BigInteger n) {
-        var results = new ArrayList<Long>(5);
+        List<Long> factors = new ArrayList<>();
+        BigInteger i = BigInteger.TWO;
+        BigInteger limit = n.sqrt();
 
-        while (n.mod(BigInteger.valueOf(2)).intValue() == 0) {
-            if (logging) {
-                logger.info("One factor found: " + n);
-            }
-
-            results.add(2L);
-            n = n.divide(BigInteger.valueOf(2L));
-        }
-
-        for (var i = 3; i <= n.sqrt().longValue(); i += 2) {
-            if (logging) {
-                logger.info("Testing other factors with sqrt: " + n);
-            }
-            while (n.mod(BigInteger.valueOf(i)).equals(BigInteger.ZERO)) {
+        while (i.compareTo(limit) <= 0) {
+            if (n.mod(i).equals(BigInteger.ZERO)) {
                 if (logging) {
-                    logger.info("Number 'i' is a factor: " + i);
+                    logger.info("Factor found: {}", i);
                 }
-                results.add((long) i);
-                if (logging) {
-                    logger.info("Now divide 'n' for 'i': {}/{}", n, i);
-                }
-                n = n.divide(BigInteger.valueOf(i));
+                factors.add(i.longValue());
+                n = n.divide(i);
+                limit = n.sqrt();
+            } else {
+                i = i.add(BigInteger.ONE);
             }
         }
-        if (n.compareTo(BigInteger.TWO) > 0) {
+
+        if (n.compareTo(BigInteger.ONE) > 0) {
             if (logging) {
-                logger.info("The last factor is: " + n);
+                logger.info("Adding remaining factor: {}", n);
             }
-            results.add(n.longValue());
+            factors.add(n.longValue());
         }
+
         if (logging) {
-            logger.info("Returning factors: " + results);
+            logger.info("Found {} factors: {}", factors.size(), factors);
         }
-        return Collections.unmodifiableList(results);
+
+        return List.copyOf(factors);
     }
 
+    private boolean isPrime(BigInteger n) {
+        if (n.compareTo(BigInteger.TWO) < 0) {
+            return false;
+        }
+        if (n.equals(BigInteger.TWO) || n.equals(BigInteger.valueOf(3))) {
+            return true;
+        }
+        if (n.mod(BigInteger.TWO).equals(BigInteger.ZERO) || n.mod(BigInteger.valueOf(3)).equals(BigInteger.ZERO)) {
+            return false;
+        }
+        for (BigInteger i = BigInteger.valueOf(5); i.multiply(i).compareTo(n) <= 0; i = i.add(BigInteger.valueOf(6))) {
+            if (n.mod(i).equals(BigInteger.ZERO) || n.mod(i.add(BigInteger.TWO)).equals(BigInteger.ZERO)) {
+                return false;
+            }
+        }
+        return true;
+    }
 }
